crates/strider-analyze/tests/snapshots/v2__x64__floats__f32_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ RAX", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "28" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "26" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "25" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "22" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Less\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "25" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "37" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "46" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "51" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "43" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Less\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "43" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
