crates/strider-analyze/tests/snapshots/v2__x64__floats__f32_neg_abs.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xffffffff000000000000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ShiftLeft:u128", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x60:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="ShiftRight:u128", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x60:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Load u128\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x402040:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="ShiftRight:u128", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x60:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="ShiftLeft:u128", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x40:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="ShiftRight:u128", shape=box, fillcolor="#2d2d2d"];
  "17" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x40:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="ShiftRight:u128", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x40:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffff00000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="ShiftLeft:u128", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x20:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="ShiftRight:u128", shape=box, fillcolor="#2d2d2d"];
  "17" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x20:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="ShiftRight:u128", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x20:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "51" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "59" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0xffffffffffffffffffffffff00000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "58" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "60" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "54" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "58" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0xffffffffffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "64" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0xffffffff00000000ffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "65" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "26" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0xffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "35" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nRAX", shape=Mdiamond, fillcolor="#1a3a5c"];
}
